# Auth

./: CMakeLists.txt  README.md
headers/: Auth.h  CMakeLists.txt  DataStructures.h  Exceptions.h  GapiWrapper.h  Mocks.h  Utils.h
lib/: CMakeLists.txt
lib/auth/: AuthorizeUser.cc  IsUserRegisteredForService.cc  IsUserWhitelisted.cc  IsWhitelistingEnabledForService.cc  Service.cc  SigninOrRegister.cc  WriteUserDate.cc
lib/datastructures/: UserItem.cc  WhiteListedUser.cc  WhitelistEnabledService.cc
lib/exceptions/: Exceptions.cc
lib/gapi/: GapiWrapper.cc
lib/utils/: AwsStringTranslations.cc
tst/: CMakeLists.txt
tst/auth/: AuthorizeUserTest.cc  SigninTest.cc
tst/datastructures/: UserItemTest.cc  WhiteListedUserTest.cc  WhitelistEnabledServiceTest.cc
tst/mocks/: MockDynamoDBClient.cc  MockGapiWrapper.cc
